# XuefengAgent-Desktop

./: .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  settings-page.html  settings.html  vacation.html  vite.config.ts  版权声明.md
.mimocode/skills/git-commit/: SKILL.md
.mimocode/skills/release-notes/: SKILL.md
.mimocode/skills/update-json/: SKILL.md
.mimocode/skills/version-bump/: SKILL.md
scripts/: check_db.py  generate-icons.mjs  generate-update-json.cjs  release-template.md  set-signing-env.ps1
src/: App.vue  settings-main.ts  settings-page-main.ts  vacation-main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: majors.json
src-tauri/sidecar/: server.py
src-tauri/src/: lib.rs  main.rs
src/assets/styles/: global.css
src/components/: ApiSettings.vue  ChatArea.vue  InputBox.vue  MajorSelect.vue  MarkdownRenderer.vue  Sidebar.vue  TopBar.vue  UpdateChecker.vue
src/composables/: useChat.ts
src/types/: index.ts
src/utils/: providers.ts
src/views/: SettingsPage.vue  SoftwareSettingsPage.vue  VacationPage.vue
